added a few more updates

--- a/daily-projects.html
+++ b/daily-projects.html
@@ -9,6 +9,224 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Jordan's Daily Projects</h1>
+    </header>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
+
+    <div class="week" name="week1">
+        <section>
+            <h2>Monday</h2>
+        </section>
+        <section>
+            <h2>Tuesday</h2>
+        </section>
+        <section>
+            <h2>Wednesday</h2>
+        </section>
+        <section>
+            <h2>Thursday</h2>
+        </section>
+        <section>
+            <h2>Friday</h2>
+        </section>
+    </div>
 </body>
 </html>
