Added link for wk1-friday-toy

--- a/daily-projects.html
+++ b/daily-projects.html
@@ -58,8 +58,8 @@
                 <a href="">Project Name</a>
                 <input type="checkbox" value="Completed" disabled="true">
                 <h3>Toy Problems</h3>
-                <a href="">project name</a>
-                <input type="checkbox" value="Completed" disabled="true">
+                <a href="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?h=350&auto=compress&cs=tinysrgb">React-1-Mini</a>
+                <input type="checkbox" value="Completed">
             </section>
         </div>
 
