--- a/daily-projects.html
+++ b/daily-projects.html
@@ -30,19 +30,19 @@
                     <h2>Tuesday</h2>
                     <h3>Afternoon Project</h3>
                     <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
                     <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Wednesday</h2>
                     <h3>Afternoon Project</h3>
                     <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
                     <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Thursday</h2>
@@ -56,11 +56,11 @@
                 <section>
                     <h2>Friday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/react-1-afternoon">React-1-Afternoon</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?h=350&auto=compress&cs=tinysrgb">React-1-Mini</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/react-1-mini">React-1-Mini</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
             </div>
         </div>
