added week2 monday toy problem

--- a/daily-projects.html
+++ b/daily-projects.html
@@ -73,8 +73,8 @@
                     <a href="">not entered</a>
                     <input type="checkbox" disabled="true">
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/String-Disemvoweler-7">String Disemvoweler</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Tuesday</h2>
