added links up to Week 4, Monday. Missing some older links still

--- a/daily-projects.html
+++ b/daily-projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Daily Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
@@ -32,7 +33,7 @@
                     <a href="">not entered</a>
                     <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
+                    <a href="https://repl.it/@jordanmbush/Javascript-II">Javascript II</a>
                     <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
@@ -70,8 +71,8 @@
                 <section>
                     <h2>Monday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/react-2-afternoon">React-2-Afternoon</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
                     <a href="https://repl.it/@jordanmbush/String-Disemvoweler-7">String Disemvoweler</a>
                     <input type="checkbox" disabled="true" checked>
@@ -79,11 +80,11 @@
                 <section>
                     <h2>Tuesday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/react-3-afternoon-2">React-3-Afternoon-2</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Printer-Errors-Week2-Tuesday-Toy-Problem">Printer Errors</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Wednesday</h2>
@@ -91,8 +92,8 @@
                     <a href="">not entered</a>
                     <input type="checkbox" disabled="true">
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/pigLatin">pigLatin</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Thursday</h2>
@@ -100,49 +101,49 @@
                     <a href="">not entered</a>
                     <input type="checkbox" disabled="true">
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Remove-the-Dubstep">Remove the Dubstep</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Friday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
+                    <a href="">Started on Personl NoDB Projects</a>
                     <input type="checkbox" disabled="true">
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
+                    <a href="">No toy problem for this day</a>
                     <input type="checkbox" disabled="true">
                 </section>
             </div>
         </div>
         <div class="week-container" >
-            <h1>ENTER WEEK STARTING DATE</h1>
+            <h1>Week 3 - 02/05/2017</h1>
             <div class="week">
                 <section>
                     <h2>Monday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/nodb-project">Presented Personal NoDB Projects</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
+                    <a href="">No Toy Problem for this day</a>
                     <input type="checkbox" disabled="true">
                 </section>
                 <section>
                     <h2>Tuesday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
+                    <a href="https://github.com/jordanmbush/PH-1-routing">Routing with HashRouter</a>
                     <input type="checkbox" disabled="true">
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Vowel-Counter-Question-Week-3-Tuesday">Vowel Counter</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Wednesday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/sql-1-afternoon">SQL-1-Afternoon</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Square-Each-Number-Week-3-Wednesday">Square Each Number</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Thursday</h2>
@@ -165,16 +166,16 @@
             </div>
         </div>
         <div class="week-container" >
-            <h1>ENTER WEEK STARTING DATE</h1>
+            <h1>Week 4 - 02/12/2018</h1>
             <div class="week">
                 <section>
                     <h2>Monday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/react-5-afternoon">Redux</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Human-Readable-Time-Week-4-Monday">Human-Readable-Time</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Tuesday</h2>
