added Week 4, Tuesday links

--- a/daily-projects.html
+++ b/daily-projects.html
@@ -180,11 +180,11 @@
                 <section>
                     <h2>Tuesday</h2>
                     <h3>Afternoon Project</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://github.com/jordanmbush/node-3-afternoon">Express-Sessions</a>
+                    <input type="checkbox" disabled="true" checked>
                     <h3>Toy Problems</h3>
-                    <a href="">not entered</a>
-                    <input type="checkbox" disabled="true">
+                    <a href="https://repl.it/@jordanmbush/Fold-your-way-to-the-moon-Question">Fold Your Way to the Moon</a>
+                    <input type="checkbox" disabled="true" checked>
                 </section>
                 <section>
                     <h2>Wednesday</h2>
